syntax = "proto3";

package odenneServerPackage;

service OdenneServer {
    rpc battle(BattleRequest) returns (BattleResponse) {};
}

message BattleRequest {
    string name = 1;
    string opponent = 2;
    string move = 3;
}

message BattleResponse {
    string result = 1;
    string opponent = 2;
    string move = 3;
}